<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#d1d1d1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.krisg.riseabove.jeepneys.MyActivity$PlaceholderFragment"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_ver"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_copyright"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayMap"
                android:id="@+id/btn_displayMap"
                android:drawableTop="@drawable/ic_viewmap"
                android:text="@string/btn_map"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayMap"
                android:id="@+id/btn_locationsList"
                android:drawableTop="@drawable/ic_locations"
                android:text="@string/btn_locations"
                />


            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayMap"
                android:id="@+id/btn_routes"
                android:drawableTop="@drawable/maproute_icon"
                android:text="@string/btn_routes"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayMap"
                android:id="@+id/btn_help"
                android:drawableTop="@drawable/ic_help"
                android:text="@string/btn_help"
                />
        </LinearLayout>

    </LinearLayout>



    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/btn_map"
        android:onClick="displayMap"
        /-->

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextLatitude"
            android:hint="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/editTextLongitude"
            android:hint="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayMap"
            android:id="@+id/imgBtn_goto"
            android:src="@drawable/maproute_icon"

            />

        </LinearLayout-->

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jeep_routes"
        android:id="@+id/btn_jeepRoutes"
        /-->
    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:id="@+id/btn_favorites"
        /-->




</LinearLayout>
